overhaul to use more templating and less scripts

--- a/template/ignition.dockerfile.jinja
+++ b/template/ignition.dockerfile.jinja
@@ -7,8 +7,6 @@
 ###########################################
 FROM ubuntu:{{ ubuntu_distro }} AS base
 
-ENV IGN_DISTRO={{ ign_distro }}
-
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -17,20 +15,30 @@ ENV DEBIAN_FRONTEND=noninteractive
 {% include 'snippits/timezone.jinja' %}
 
 # install packages
-COPY install_base.sh /setup/install_base.sh
-RUN ./setup/install_base.sh && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -q -y \
+  dirmngr \
+  gnupg2 \
+  lsb-release \
+  wget \
+  && sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list' \
+  && wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add - \
+  && apt-get update && apt-get install -y \
+    ignition-{{ ign_distro }} \
+  && rm -rf /var/lib/apt/lists/*
+
 
 ###########################################
 # Develop image 
 ###########################################
 FROM base AS dev
 
-ENV GAZEBO_VERSION={{ gazebo_version }}
-
 ENV DEBIAN_FRONTEND=noninteractive
 # Install dev tools
-COPY install_dev.sh /setup/install_dev.sh
-RUN ./setup/install_dev.sh && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+  libignition-plugin-dev \
+  libignition-cmake2-dev \
+  libignition-gazebo{{ gazebo_version }}-dev \
+  && rm -rf /var/lib/apt/lists/*
 
 {% include 'snippits/ros_user.jinja' %}
 ENV DEBIAN_FRONTEND=
