--- a/template/ros.dockerfile.jinja
+++ b/template/ros.dockerfile.jinja
@@ -8,29 +8,36 @@
 FROM ubuntu:{{ ubuntu_distro }} AS base
 
 ENV DEBIAN_FRONTEND=noninteractive
-ENV ROS_DISTRO={{ ros_distro }}
 
 {% include 'snippits/language.jinja' %}
 
 {% include 'snippits/timezone.jinja' %}
 
 # Install ROS
-COPY install_ros_base.sh /setup/install_ros_base.sh
-RUN /setup/install_ros_base.sh && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+    dirmngr \
+    gnupg2 \
+    lsb-release \
+  && sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' \
+  && apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654 \
+  && apt-get update && apt-get install -y \
+    ros-{{ ros_distro }}-ros-base \
+  && rm -rf /var/lib/apt/lists/*
 
 # Setup environment
-ENV LD_LIBRARY_PATH=/opt/ros/$ROS_DISTRO/lib:$LD_LIBRARY_PATH
-ENV ROS_ROOT=/opt/ros/$ROS_DISTRO/share/ros
-ENV ROS_PACKAGE_PATH=/opt/ros/$ROS_DISTRO/share
+ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/lib:$LD_LIBRARY_PATH
+ENV ROS_DISTRO={{ ros_distro }}
+ENV ROS_ROOT=/opt/ros/{{ ros_distro }}/share/ros
+ENV ROS_PACKAGE_PATH=/opt/ros/{{ ros_distro }}/share
 ENV ROS_MASTER_URI=http://localhost:11311
 ENV ROS_PYTHON_VERSION={{ python_env }}
 ENV ROS_VERSION=1
-ENV PATH=/opt/ros/$ROS_DISTRO/bin:$PATH
+ENV PATH=/opt/ros/{{ ros_distro }}/bin:$PATH
 ENV ROSLISP_PACKAGE_DIRECTORIES=
-ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python{{ python_version }}/dist-packages:$PYTHONPATH
-ENV PKG_CONFIG_PATH=/opt/ros/$ROS_DISTRO/lib/pkgconfig:$PKG_CONFIG_PATH
-ENV ROS_ETC_DIR=/opt/ros/$ROS_DISTRO/etc/ros
-ENV CMAKE_PREFIX_PATH=/opt/ros/$ROS_DISTRO:$CMAKE_PREFIX_PATH
+ENV PYTHONPATH=/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/dist-packages:$PYTHONPATH
+ENV PKG_CONFIG_PATH=/opt/ros/{{ ros_distro }}/lib/pkgconfig:$PKG_CONFIG_PATH
+ENV ROS_ETC_DIR=/opt/ros/{{ ros_distro }}/etc/ros
+ENV CMAKE_PREFIX_PATH=/opt/ros/{{ ros_distro }}:$CMAKE_PREFIX_PATH
 ENV DEBIAN_FRONTEND=
 
 ###########################################
@@ -40,8 +47,19 @@ FROM base AS dev
 
 ENV DEBIAN_FRONTEND=noninteractive
 # Install dev tools
-COPY install_ros_dev{{ python_env }}.sh /setup/install_ros_dev.sh
-RUN /setup/install_ros_dev.sh && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+    python{{ python_env }}-rosdep \
+    python{{ python_env }}-rosinstall \
+    python{{ python_env }}-rosinstall-generator \
+    python{{ python_env }}-wstool \
+    python{{ python_env }}-pip \
+    pylint{{ python_env }} \
+    build-essential \
+    bash-completion \
+    git \
+    vim \
+  && rm -rf /var/lib/apt/lists/* \
+  && rosdep init || echo "rosdep already initialized"
 
 {% include 'snippits/ros_user.jinja' %}
 ENV DEBIAN_FRONTEND=
@@ -54,7 +72,7 @@ FROM dev AS full
 ENV DEBIAN_FRONTEND=noninteractive
 # Install the full release
 RUN apt-get update && apt-get install -y \
-  ros-${ROS_DISTRO}-desktop \
+  ros-{{ ros_distro }}-desktop \
   && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=
 
@@ -66,6 +84,6 @@ FROM full AS gazebo
 ENV DEBIAN_FRONTEND=noninteractive
 # Install gazebo
 RUN apt-get update && apt-get install -y \
-  ros-${ROS_DISTRO}-gazebo* \
+  ros-{{ ros_distro }}-gazebo* \
   && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=
