--- a/template/gazebo.dockerfile.jinja
+++ b/template/gazebo.dockerfile.jinja
@@ -7,8 +7,6 @@
 ###########################################
 FROM ubuntu:{{ ubuntu_distro }} AS base
 
-ENV GAZEBO_RELEASE={{ gazebo_release }}
-
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -16,9 +14,17 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 {% include 'snippits/timezone.jinja' %}
 
-COPY install_base.sh /setup/install_base.sh
-RUN ./setup/install_base.sh && rm -rf /var/lib/apt/lists/*
-
+# Install gazebo
+RUN apt-get update && apt-get install -q -y \
+    dirmngr \
+    gnupg2 \
+    lsb-release \
+    wget \
+  && sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list' \
+  && wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add - \
+  && apt-get update && apt-get install -y \
+    gazebo{{ gazebo_release }} \
+  && rm -rf /var/lib/apt/lists/*
 
 ###########################################
 # Develop image 
@@ -27,8 +33,9 @@ FROM base AS dev
 
 ENV DEBIAN_FRONTEND=noninteractive
 # Install dev tools
-COPY install_dev.sh /setup/install_dev.sh
-RUN ./setup/install_dev.sh && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+    libgazebo{{ gazebo_release }}-dev \
+  && rm -rf /var/lib/apt/lists/*
 
 {% include 'snippits/ros_user.jinja' %}
 ENV DEBIAN_FRONTEND=
