--- a/template/ros.dockerfile.jinja
+++ b/template/ros.dockerfile.jinja
@@ -25,19 +25,19 @@ RUN apt-get update && apt-get install -y \
   && rm -rf /var/lib/apt/lists/*
 
 # Setup environment
-ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/lib:$LD_LIBRARY_PATH
+ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/lib
 ENV ROS_DISTRO={{ ros_distro }}
 ENV ROS_ROOT=/opt/ros/{{ ros_distro }}/share/ros
 ENV ROS_PACKAGE_PATH=/opt/ros/{{ ros_distro }}/share
 ENV ROS_MASTER_URI=http://localhost:11311
 ENV ROS_PYTHON_VERSION={{ python_env }}
 ENV ROS_VERSION=1
-ENV PATH=/opt/ros/{{ ros_distro }}/bin:$PATH
+ENV PATH=/opt/ros/{{ ros_distro }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ENV ROSLISP_PACKAGE_DIRECTORIES=
-ENV PYTHONPATH=/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/dist-packages:$PYTHONPATH
-ENV PKG_CONFIG_PATH=/opt/ros/{{ ros_distro }}/lib/pkgconfig:$PKG_CONFIG_PATH
+ENV PYTHONPATH=/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/dist-packages
+ENV PKG_CONFIG_PATH=/opt/ros/{{ ros_distro }}/lib/pkgconfig
 ENV ROS_ETC_DIR=/opt/ros/{{ ros_distro }}/etc/ros
-ENV CMAKE_PREFIX_PATH=/opt/ros/{{ ros_distro }}:$CMAKE_PREFIX_PATH
+ENV CMAKE_PREFIX_PATH=/opt/ros/{{ ros_distro }}
 ENV DEBIAN_FRONTEND=
 
 ###########################################
@@ -53,6 +53,8 @@ RUN apt-get update && apt-get install -y \
     python{{ python_env }}-rosinstall-generator \
     python{{ python_env }}-wstool \
     python{{ python_env }}-pip \
+    python{{ python_env }}-pep8 \
+    python{{ python_env }}-autopep8 \
     pylint{{ python_env }} \
     build-essential \
     bash-completion \
