added nvidia snippet and images

--- a/template/gazebo.dockerfile.jinja
+++ b/template/gazebo.dockerfile.jinja
@@ -39,3 +39,11 @@ RUN apt-get update && apt-get install -y \
 
 {% include 'snippits/ros_user.jinja' %}
 ENV DEBIAN_FRONTEND=
+
+###########################################
+#  Full+Gazebo+Nvidia image 
+###########################################
+
+FROM gazebo AS nvidia
+
+{% include 'snippits/nvidia.jinja' %}
