--- a/template/ignition.dockerfile.jinja
+++ b/template/ignition.dockerfile.jinja
@@ -42,3 +42,10 @@ RUN apt-get update && apt-get install -y \
 
 {% include 'snippits/ros_user.jinja' %}
 ENV DEBIAN_FRONTEND=
+
+###########################################
+# Nvidia image 
+###########################################
+FROM dev AS nvidia
+
+{% include 'snippits/nvidia.jinja' %}
