Add sudo to ros dockerfiles

--- a/template/ros.dockerfile.jinja
+++ b/template/ros.dockerfile.jinja
@@ -19,6 +19,7 @@ RUN apt-get update && apt-get install -y \
     dirmngr \
     gnupg2 \
     lsb-release \
+    sudo \
   && sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' \
   && curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add - \
   && apt-get update && apt-get install -y \
