--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -48,7 +48,8 @@ RUN apt-get update && apt-get install -y \
   cmake \
   gdb \
   git \
-  pylint3 \
+  {% if ros_distro == "humble" -%}pylint \
+  {%- else %}pylint3 \{% endif %}
   python3-argcomplete \
   python3-colcon-common-extensions \
   python3-pip \
