--- a/template/ignition.dockerfile.jinja
+++ b/template/ignition.dockerfile.jinja
@@ -16,16 +16,15 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # install packages
 RUN apt-get update && apt-get install -q -y \
-  dirmngr \
-  gnupg2 \
   lsb-release \
   wget \
-  && sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list' \
-  && wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add - \
-  && apt-get update && apt-get install -y \
+  gnupg \
+  sudo \
+  && wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg \
+  && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null \
+  && apt-get update && apt-get install -y -q \
     ignition-{{ ign_distro }} \
   && rm -rf /var/lib/apt/lists/*
-
 
 ###########################################
 # Develop image 
