--- a/template/readme.md.jinja
+++ b/template/readme.md.jinja
@@ -12,11 +12,13 @@ docker pull althack/{{ repo_name }}:{{ dockerfiles[0].name }}-{{ dockerfiles[0].
 ## Organization
 
 The main docker image tags are:
-{% for file in dockerfiles -%}
+
+{% for file in dockerfiles %}
+{{ file.name }}{% if file.eol %} (eol){% endif %}
   {% for target in file.targets %}
-* [{{ file.name }}-{{ target }}](https://github.com/athackst/dockerfiles/blob/main/{{ repo_name }}/{{ file.name }}.Dockerfile){% if file.eol %} (eol){% endif %}
-  {%- endfor -%}
-{%- endfor %}
+* [{{ file.name }}-{{ target }}](https://github.com/athackst/dockerfiles/blob/main/{{ repo_name }}/{{ file.name }}.Dockerfile)
+  {%- endfor %}
+{% endfor %}
 
 Each image is additionally tagged with the date of creation, which lets you peg to a specific version of packages.
 
