Update gazebo garden image

--- a/template/gz.dockerfile.jinja
+++ b/template/gz.dockerfile.jinja
@@ -16,15 +16,19 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # install packages
 RUN apt-get update && apt-get install -q -y \
-  gnupg \
-  lsb-release \
-  sudo \
-  wget \
+    curl \
+    gnupg \
+    lsb-release \
+    python3-argcomplete \
+    sudo \
+    wget \
   && wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg \
   && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null \
   && apt-get update && apt-get install -y -q \
     gz-{{ gz_distro }} \
   && rm -rf /var/lib/apt/lists/*
+
+{% include 'snippits/ros_user.jinja' %}
 
 ###########################################
 # Develop image 
@@ -34,19 +38,42 @@ FROM base AS dev
 ENV DEBIAN_FRONTEND=noninteractive
 # Install dev tools
 RUN apt-get update && apt-get install -y \
-  libgz-plugin-dev \
-  libgz-cmake3-dev \
-  libgz-sim{{ gazebo_version }}-dev \
+  python3-pip \
+  wget \
+  lsb-release \
+  gnupg \
+  curl \
+  && sudo sh -c 'echo "deb http://packages.ros.org/ros2/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros2-latest.list' \
+  && curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add - \
+  && sudo apt-get update \
+  && sudo apt-get install -y python3-vcstool python3-colcon-common-extensions \
   git \
   vim \
   && rm -rf /var/lib/apt/lists/*
 
-{% include 'snippits/ros_user.jinja' %}
+WORKDIR /workspaces/gazebo/src
+# Get sources
+RUN wget https://raw.githubusercontent.com/gazebo-tooling/gazebodistro/master/collection-garden.yaml \
+  && vcs import < collection-garden.yaml \
+  # Get dependencies
+  && sudo wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg \
+  && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null \
+  && sudo apt-get update \
+  && sudo apt -y install \
+      $(sort -u $(find . -iname 'packages-'`lsb_release -cs`'.apt' -o -iname 'packages.apt' | grep -v '/\.git/') | sed '/gz\|sdf/d' | tr '\n' ' ')
+
 ENV DEBIAN_FRONTEND=
 
 ###########################################
 # Nvidia image 
 ###########################################
-FROM dev AS nvidia
+FROM base AS nvidia
+
+{% include 'snippits/nvidia.jinja' %}
+
+###########################################
+# Nvidia image 
+###########################################
+FROM dev AS nvidia-dev
 
 {% include 'snippits/nvidia.jinja' %}
