--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -62,9 +62,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   vim \
   wget \
   && rm -rf /var/lib/apt/lists/* \
-  && rosdep init || echo "rosdep already initialized" \
-  # Update pydocstyle
-  && pip install --upgrade pydocstyle
+  && rosdep init || echo "rosdep already initialized"
 
 {% include 'snippits/ros_user.jinja' %}
 
