--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -23,6 +23,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     lsb-release \
     sudo \
     software-properties-common \
+    wget \
     && rm -rf /var/lib/apt/lists/*
 
 # Install ROS2
@@ -56,11 +57,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   cmake \
   gdb \
   git \
+  openssh-client \
   python3-argcomplete \
   python3-pip \
   ros-dev-tools \
   vim \
-  wget \
   && rm -rf /var/lib/apt/lists/* \
   && rosdep init || echo "rosdep already initialized"
 
@@ -88,12 +89,7 @@ FROM full AS gazebo
 
 ENV DEBIAN_FRONTEND=noninteractive
 # Install gazebo
-RUN apt-get update && apt-get install -q -y \
-  lsb-release \
-  wget \
-  gnupg \
-  sudo \
-  && wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg \
+RUN wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg \
   && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null \
   && apt-get update && apt-get install -q -y --no-install-recommends \
     ros-{{ ros_distro }}-gazebo* \
