Add ament packages to dev image

--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -3,7 +3,7 @@
 ##############################################
 
 ###########################################
-# Base image 
+# Base image
 ###########################################
 FROM {{ base_image }}:{{ image_version }} AS base
 
@@ -46,7 +46,7 @@ ENV ROS_VERSION=2
 ENV DEBIAN_FRONTEND=
 
 ###########################################
-#  Develop image 
+#  Develop image
 ###########################################
 FROM base AS dev
 
@@ -61,6 +61,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python3-argcomplete \
   python3-pip \
   ros-dev-tools \
+  ros-{{ ros_distro }}-ament-* \
   vim \
   && rm -rf /var/lib/apt/lists/*
 
@@ -72,7 +73,7 @@ ENV DEBIAN_FRONTEND=
 ENV AMENT_CPPCHECK_ALLOW_SLOW_VERSIONS=1
 
 ###########################################
-#  Full image 
+#  Full image
 ###########################################
 FROM dev AS full
 
@@ -84,7 +85,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 ENV DEBIAN_FRONTEND=
 
 ###########################################
-#  Full+Gazebo image 
+#  Full+Gazebo image
 ###########################################
 FROM full AS gazebo
 
@@ -98,7 +99,7 @@ RUN wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pk
 ENV DEBIAN_FRONTEND=
 
 ###########################################
-#  Full+Gazebo+Nvidia image 
+#  Full+Gazebo+Nvidia image
 ###########################################
 
 FROM gazebo AS gazebo-nvidia
