--- a/template/readme.md.jinja
+++ b/template/readme.md.jinja
@@ -4,9 +4,12 @@ These are the docker images I use for developing with [VSCode](https://code.visu
 See [the docs](https://athackst.github.io/dockerfiles) or read about  [how I develop with vscode and docker](https://www.allisonthackston.com/articles/docker_development.html).
 
 ## Usage
+{%- set example=dockerfiles[0] %}
+{%- set label=example.name %}
+{%- set target=example.targets[0].target %}
 
 ```bash
-docker pull althack/{{ repo_name }}:{{ dockerfiles[0].name }}-{{ dockerfiles[0].targets | first }}
+docker pull althack/{{ repo_name }}:{{ label }}-{{ target }}
 ```
 
 ## Organization
@@ -16,7 +19,7 @@ The main docker image tags are:
 {% for file in dockerfiles %}
 {{ file.name }}{% if file.eol %} (eol){% endif %}{% if file.prerelease %} (prerelease){% endif %}
   {% for target in file.targets %}
-* [{{ file.name }}-{{ target }}](https://github.com/athackst/dockerfiles/blob/main/{{ repo_name }}/{{ file.name }}.Dockerfile)
+* [{{ file.name }}-{{ target["target"] }}](https://github.com/athackst/dockerfiles/blob/main/{{ repo_name }}/{{ file.name }}.Dockerfile)
   {%- endfor %}
 {% endfor %}
 
