Add no install recommends

--- a/template/snippits/language.jinja
+++ b/template/snippits/language.jinja
@@ -1,5 +1,5 @@
 # Install language
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
   locales \
   && locale-gen en_US.UTF-8 \
   && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 \
