--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -32,7 +32,6 @@ RUN sudo add-apt-repository universe \
   && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null \
   && apt-get update && apt-get install -y --no-install-recommends \
     ros-{{ ros_distro }}-ros-base \
-    python3-argcomplete \
   && rm -rf /var/lib/apt/lists/*
 
 {%- if 'nvidia' in base_image %}
@@ -64,6 +63,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   git \
   openssh-client \
   python3-argcomplete \
+  python3-colcon-common-extensions \
   python3-pip \
   ros-dev-tools \
   ros-{{ ros_distro }}-ament-* \
