--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -43,13 +43,13 @@ RUN sudo add-apt-repository universe \
 ENV ROS_DISTRO={{ ros_distro }}
 ENV AMENT_PREFIX_PATH=/opt/ros/{{ ros_distro }}
 ENV COLCON_PREFIX_PATH=/opt/ros/{{ ros_distro }}
-ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/lib
+ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ ros_distro }}/lib
 ENV PATH=/opt/ros/{{ ros_distro }}/bin:$PATH
 ENV PYTHONPATH=/opt/ros/{{ ros_distro }}/local/lib/python{{ python_version }}/dist-packages:/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/site-packages
 ENV ROS_PYTHON_VERSION=3
 ENV ROS_VERSION=2
+ENV ROS_AUTOMATIC_DISCOVERY_RANGE=SUBNET
 ENV DEBIAN_FRONTEND=
-
 ###########################################
 #  Develop image
 ###########################################
