--- a/template/gz.dockerfile.jinja
+++ b/template/gz.dockerfile.jinja
@@ -34,7 +34,7 @@ RUN apt-get update && apt-get install -q -y \
 {% include 'snippits/nvidia.jinja' %}
 {%- endif %}
 
-{% include 'snippits/ros_user.jinja' %}
+{% include 'snippits/ros2_user.jinja' %}
 
 ###########################################
 # Develop image
